# ComfyUI-AnimatedMaskEditor

./: .comfyignore  .gitignore  LICENSE  NEW_FEATURES_README.md  NUKE_IMPORT_GUIDE.md  README.md  UPDATE_SUMMARY.md  __init__.py  animated_mask_editor.html  animated_mask_node.py  pyproject.toml  requirements.txt
.github/workflows/: publish_action.yml
web/: animated_mask_drawer.js
